# Agentic-AI-Workflow-for-Automated-Trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Agentic-AI-Trading_Project/: .env.example  .gitignore  README.md  function_app.README.md  function_app.py  function_app.requirements.txt  local.settings.json.example  pyproject.toml  requirements.txt
Agentic-AI-Trading_Project/notebooks/: alpaca_pipeline_check.ipynb  client_mock_output_demo.ipynb  llm_agents_test.ipynb  llm_text_only_smoke_test.ipynb
Agentic-AI-Trading_Project/src/: __main__.py  backtesting.py  cli.py  config.py  eda.py
Agentic-AI-Trading_Project/src/fresh_simple_trading_project/: backtesting.py  cli.py  config.py  decision_engine.py  execution.py  market_analysis.py  models.py
Agentic-AI-Trading_Project/src/fresh_simple_trading_project/storage/: __init__.py  result_azure.py
Agentic-AI-Trading_Project/src/storage/: protocols.py  raw.py
Agentic-AI-Trading_Project/tests/: test_alpaca_integration.py  test_alpha_vantage.py  test_backtesting.py  test_cli.py  test_config.py  test_function_app.py  test_information_retrieval.py  test_llm.py  test_storage.py  test_support_resistance.py  test_unified_workflow.py  test_utils.py  test_workflow.py
fresh_simple_trading_project/: .env.example  .funcignore  .gitignore  README.md  function_app.README.md  function_app.funcignore  function_app.py  function_app.requirements.txt  pyproject.toml  requirements.txt
fresh_simple_trading_project/scripts/: build_function_app_package.sh
fresh_simple_trading_project/src/fresh_simple_trading_project/: __init__.py  agents.py  alpaca_integration.py  alpha_vantage.py  backtesting.py  cli.py  config.py  data_collection.py  decision_engine.py  eda.py  execution.py  features.py  information_retrieval.py  llm.py  log_blob_uploader.py  market_analysis.py  models.py  reporting.py  risk_analysis.py  storage.py  utils.py  workflow.py
fresh_simple_trading_project/tests/: test_alpaca_integration.py  test_alpha_vantage.py  test_config.py  test_function_app.py  test_information_retrieval.py  test_llm.py  test_storage.py  test_support_resistance.py  test_unified_workflow.py  test_utils.py  test_workflow.py
(+27 files in other folders)
